--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worldwide-transcript",
+  "name": "Vue-Setup",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-lottie": "^0.2.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.6",
     "vuex": "^3.4.0"
